# functions

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.cargo/: config.toml
.github/workflows/: on-push-to-main.yml  pr.yaml  release.yaml
aws-auth/: Cargo.toml
aws-auth/src/: lib.rs  wit.rs
aws-ddb/: Cargo.toml
aws-ddb/src/: client.rs  lib.rs  types.rs  wit.rs
aws-ddb/wit/: aws-ddb.wit
aws-s3/: Cargo.toml
aws-s3/src/: client.rs  lib.rs  wit.rs
aws-s3/wit/: aws-s3.wit
aws-secrets-manager/: Cargo.toml
aws-secrets-manager/src/: client.rs  lib.rs  wit.rs
aws-secrets-manager/wit/: aws-secrets.wit
bytes/: Cargo.toml  build.rs
bytes/src/: data.rs  encoding.rs  lib.rs  wit.rs
cache/: Cargo.toml
cache-list/: Cargo.toml
cache-list/src/: collection_ttl.rs  errors.rs  lib.rs  list_interfaces.rs  types.rs  wit.rs
cache-list/wit/: cache-list.wit
cache/src/: cache_interfaces.rs  errors.rs  lib.rs  set_if.rs  wit.rs
cache/wit/: cache-scalar.wit
collections-common/: Cargo.toml
collections-common/src/: lib.rs
examples/cache-scalar/: Cargo.toml
examples/cache-scalar/src/: lib.rs
examples/dynamodb-accelerator/: Cargo.toml
examples/dynamodb-accelerator/src/: lib.rs
examples/environment-variables/: Cargo.toml
examples/environment-variables/src/: lib.rs
examples/fine-foods-embeddings/: Cargo.toml
examples/fine-foods-embeddings/src/: lib.rs
examples/function-environment/: Cargo.toml
examples/function-environment/src/: lib.rs
examples/logging/: Cargo.toml
examples/logging-extended/: Cargo.toml
examples/logging-extended/src/: lib.rs
examples/logging/src/: lib.rs
examples/reading-and-sending-headers/: Cargo.toml
examples/reading-and-sending-headers/src/: lib.rs
examples/s3-get/: Cargo.toml
examples/s3-get/src/: lib.rs
examples/s3-put/: Cargo.toml
examples/s3-put/src/: lib.rs
examples/secrets-manager-get/: Cargo.toml
examples/secrets-manager-get/src/: lib.rs
examples/spawn-function/: Cargo.toml
examples/spawn-function-json/: Cargo.toml
examples/spawn-function-json/src/: lib.rs
examples/spawn-function/src/: lib.rs
examples/sse-proxy/: Cargo.toml
examples/sse-proxy/src/: lib.rs
examples/token-vending-machine/: Cargo.toml
examples/token-vending-machine/src/: lib.rs
examples/turbopuffer-index/: Cargo.toml
examples/turbopuffer-index-articles/: Cargo.toml
examples/turbopuffer-index-articles/src/: lib.rs
examples/turbopuffer-index/src/: lib.rs
examples/turbopuffer-recommend-articles/: Cargo.toml
examples/turbopuffer-recommend-articles/src/: lib.rs
examples/turbopuffer-search/: Cargo.toml
examples/turbopuffer-search-articles/: Cargo.toml
examples/turbopuffer-search-articles/src/: lib.rs
examples/turbopuffer-search/src/: lib.rs
examples/valkey-cluster-vector-index/: Cargo.toml
examples/valkey-cluster-vector-search/: Cargo.toml
examples/valkey-cluster-vector-search/src/: lib.rs
examples/valkey-vector-embeddings/: Cargo.toml
examples/valkey-vector-embeddings/src/: lib.rs
examples/web-function/: Cargo.toml
examples/web-function-json-greeter/: Cargo.toml
examples/web-function-json-greeter/src/: lib.rs
examples/web-function-token-metadata/: Cargo.toml
guest-spawn/: Cargo.toml
guest-spawn/examples/: spawn-json.rs  spawn.rs
guest-spawn/src/: function_spawn.rs  lib.rs  wit.rs
guest-spawn/wit/: guest-function-spawn.wit
guest-web/: Cargo.toml  build.rs
guest-web/examples/: echo.rs  greet.rs
guest-web/src/: function_web.rs  into_web_response.rs  lib.rs  response.rs  response_stream.rs  web_environment.rs  wit.rs
guest-web/wit/: guest-function-web.wit
guest-web/wit/guest/: world.wit
http/: Cargo.toml
http/src/: invoke.rs  lib.rs  request.rs  sse.rs  wit.rs
http/wit/: http.wit
log/: Cargo.toml
log/src/: host_logging.rs  lib.rs  wit.rs
momento-functions/: Cargo.toml
momento-functions-host/: Cargo.toml
momento-functions-host/src/: cache.rs  encoding.rs  error.rs  http.rs  lib.rs  logging.rs  redis.rs  spawn.rs  token.rs  topics.rs  web_extensions.rs
momento-functions-host/src/aws/: auth.rs  ddb.rs  lambda.rs  mod.rs  s3.rs  secrets_manager.rs
momento-functions-log/: Cargo.toml
momento-functions-log/src/: host_logging.rs  lib.rs  topic_logger.rs
momento-functions-wit/: Cargo.toml
momento-functions-wit/src/: function_spawn.rs  function_web.rs  host.rs  lib.rs
momento-functions-wit/wit/: cache-list.wit  cache-scalar.wit  guest-function-spawn.wit  guest-function-web.wit  permission-messages.wit  token.wit  topic.wit  types.wit  world.wit
momento-functions-wit/wit/host/: aws-auth.wit  aws-ddb.wit  aws-lambda.wit  aws-s3.wit  aws-secrets.wit  http.wit  log.wit  redis.wit  spawn.wit  time.wit  world.wit
momento-functions/examples/: cache-list.rs  cache-scalar.rs  dynamodb-accelerator.rs  environment-variables.rs  fine-foods-embeddings.rs  function-environment.rs  logging-cloudwatch.rs  logging-extended.rs  logging.rs  reading-and-sending-headers.rs  s3-express-download.rs  s3-express-upload.rs  s3-express-worker.rs  s3-get.rs  s3-put.rs  secrets-manager-get.rs  spawn-function-json.rs  spawn-function.rs  token-vending-machine.rs  turbopuffer-index-articles.rs  turbopuffer-index.rs  turbopuffer-recommend-articles.rs  turbopuffer-recommended-articles.rs  turbopuffer-search-articles.rs  turbopuffer-search.rs  valkey-cluster-vector-index.rs  valkey-cluster-vector-search.rs  valkey-vector-embeddings.rs  valkey-vector-index.rs  valkey-vector-search.rs  web-function-json-greeter.rs  web-function-token-metadata.rs  web-function.rs
momento-functions/src/: encode_response_bridge.rs  lib.rs  response.rs
momento-functions/src/macros/: function_spawn.rs  function_web.rs  mod.rs
token/: Cargo.toml
token/src/: generate.rs  lib.rs  permissions.rs  wit.rs
topic/: Cargo.toml
topic/src/: lib.rs  publish.rs  wit.rs
topic/wit/: topic.wit
valkey/: Cargo.toml
valkey/src/: client.rs  command.rs  lib.rs  wit.rs
wit/: cache-scalar.wit  guest-function-spawn.wit  topic.wit
wit/host/: aws-auth.wit  aws-ddb.wit  spawn.wit  world.wit
(+3 files in other folders)
