[workspace]
resolver = "2"

members = [
    "aws-auth",
    "aws-s3",
    "bytes",
    "cache",
    "guest-spawn",
    "guest-web",
    "log",
    "momento-functions",
    "momento-functions-host",
    "momento-functions-wit",
]

[workspace.package]
version = "0.15.1" # x-release-please-version
authors = ["momentohq", "kvc0", "tylerburdsall"]
repository = "https://github.com/momentohq/functions"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
keywords = ["service", "performance", "faas"]
categories = ["web-programming"]

[profile.release]
lto = true

[workspace.dependencies]
momento-functions-aws-auth    = { version = "0", path = "aws-auth" }
momento-functions-aws-s3     = { version = "0", path = "aws-s3" }
momento-functions-bytes      = { version = "0", path = "bytes" }
momento-functions-guest-spawn = { version = "0", path = "guest-spawn" }
momento-functions-host   = { version = "0", path = "momento-functions-host" }
momento-functions-log   = { version = "0", path = "momento-functions-log" }
momento-functions-wit   = { version = "0", path = "momento-functions-wit" }

base64                  = { version = "0" }
itertools               = { version = "0" }
log                     = { version = "0" }
serde                   = { version = "1", features = ["derive"] }
serde_json              = { version = "1" }
sha2                    = { version = "0" }
tiktoken-rs             = { version = "0" }
thiserror               = { version = "2" }
time                    = { version = "0.3" }
# wit-bindgen             = { version = "0.53" }
wit-bindgen             = { git = "https://github.com/bytecodealliance/wit-bindgen", commit = "ffbf78c6883f0f5d8ed3c5b6ea36bbedc1ab7ea8" }
