[workspace]
resolver = "2"

members = [
    "aws-auth",
    "aws-ddb",
    "aws-s3",
    "aws-secrets-manager",
    "bytes",
    "cache",
    "cache-list",
    "collections-common",
    "guest-spawn",
    "guest-web",
    "log",
    "momento-functions",
    "momento-functions-host",
    "momento-functions-wit",
    "http",
    "token",
    "topic",
    "valkey",

    # V2 examples
    "examples/cache-scalar",
    "examples/dynamodb-accelerator",
    "examples/environment-variables",
    "examples/fine-foods-embeddings",
    "examples/function-environment",
    "examples/logging",
    "examples/logging-extended",
    "examples/reading-and-sending-headers",
    "examples/s3-get",
    "examples/s3-put",
    "examples/secrets-manager-get",
    "examples/spawn-function",
    "examples/spawn-function-json",
    "examples/token-vending-machine",
    "examples/turbopuffer-index",
    "examples/turbopuffer-index-articles",
    "examples/turbopuffer-recommend-articles",
    "examples/turbopuffer-search",
    "examples/turbopuffer-search-articles",
    "examples/valkey-cluster-vector-index",
    "examples/valkey-cluster-vector-search",
    "examples/valkey-vector-embeddings",
    "examples/web-function",
    "examples/web-function-json-greeter",
    "examples/web-function-token-metadata",
]

[workspace.package]
version = "0.25.0" # x-release-please-version
authors = ["momentohq", "kvc0", "tylerburdsall"]
repository = "https://github.com/momentohq/functions"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
keywords = ["service", "performance", "faas"]
categories = ["web-programming"]

[profile.release]
lto = true

[workspace.dependencies]
momento-functions-aws-auth    = { version = "0", path = "aws-auth" }
momento-functions-aws-ddb    = { version = "0", path = "aws-ddb" }
momento-functions-aws-s3     = { version = "0", path = "aws-s3" }
momento-functions-aws-secrets-manager = { version = "0", path = "aws-secrets-manager" }
momento-functions-bytes      = { version = "0", path = "bytes" }
momento-functions-cache      = { version = "0", path = "cache" }
momento-functions-collections-common = { version = "0", path = "collections-common" }
momento-functions-guest-spawn = { version = "0", path = "guest-spawn" }
momento-functions-guest-web  = { version = "0", path = "guest-web" }
momento-functions-host   = { version = "0", path = "momento-functions-host" }
momento-functions-host-log = { version = "0", path = "log" }
momento-functions-http   = { version = "0", path = "http" }
momento-functions-log   = { version = "0", path = "momento-functions-log" }
momento-functions-token  = { version = "0", path = "token" }
momento-functions-valkey = { version = "0", path = "valkey" }
momento-functions-wit   = { version = "0", path = "momento-functions-wit" }

base64                  = { version = "0" }
itertools               = { version = "0" }
log                     = { version = "0" }
serde                   = { version = "1", features = ["derive"] }
serde_json              = { version = "1" }
sha2                    = { version = "0" }
tiktoken-rs             = { version = "0" }
thiserror               = { version = "2" }
time                    = { version = "0.3" }
wit-bindgen             = { version = "0.55" }
