[package]
name = "momento-functions-bytes"
description = "off-guest buffer management"
version = "0.14.1"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wit-bindgen             = { workspace = true }
serde                   = { workspace = true }
serde_json              = { workspace = true }
