[package]
name = "momento-functions-cache"
description = "Host interfaces for Cache interactions"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
momento-functions-bytes = { workspace = true }

serde                   = { workspace = true }
serde_json              = { workspace = true }
thiserror               = { workspace = true }
wit-bindgen             = { workspace = true }
