[package]
name = "momento-functions-guest-spawn"
description = "Guest bindings for Momento Spawn Functions"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[example]]
name = "spawn"
crate-type = ["cdylib"]

[[example]]
name = "spawn-json"
crate-type = ["cdylib"]

[dependencies]
momento-functions-bytes = { workspace = true }
wit-bindgen             = { workspace = true }

[dev-dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
