[package]
name = "momento-functions-http"
description = "Host interfaces for making HTTP requests from Momento Functions"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
momento-functions-bytes = { workspace = true }

thiserror               = { workspace = true }
wit-bindgen             = { workspace = true }
