[package]
name = "momento-functions-host-log"
description = "Log adapter for Momento Functions"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log         = { workspace = true }
thiserror   = { workspace = true }
time        = { workspace = true, features = ["formatting"] }
wit-bindgen = { workspace = true }
