[package]
name = "momento-functions-log"
description = "Log adapter for momento Functions"
version = "0.14.1"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log                     = { workspace = true }
momento-functions-host  = { workspace = true }
thiserror               = { workspace = true }
time                    = { workspace = true, features = ["formatting"] }
