[package]
name = "momento-functions-wit"
description = "Internal support crate for Momento Functions"
version = "0.14.1"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wit-bindgen             = { workspace = true }
