[package]
name = "momento-functions"
description = "Support crate for Momento Functions"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[example]]
name = "logging"
crate-type = ["cdylib"]

[[example]]
name = "spawn-function"
crate-type = ["cdylib"]

[[example]]
name = "spawn-function-json"
crate-type = ["cdylib"]

[[example]]
name = "web-function"
crate-type = ["cdylib"]

[[example]]
name = "web-function-json-greeter"
crate-type = ["cdylib"]

[dependencies]
serde                   = { workspace = true }
serde_json              = { workspace = true }
momento-functions-host  = { workspace = true }
momento-functions-wit   = { workspace = true }

[dev-dependencies]
log                     = { workspace = true }
momento-functions-log   = { workspace = true }
