[package]
name = "momento-functions"
description = "Support crate for Momento Functions"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[example]]
name = "dynamodb-accelerator"
crate-type = ["cdylib"]

[[example]]
name = "logging-extended"
crate-type = ["cdylib"]

[[example]]
name = "logging"
crate-type = ["cdylib"]

[[example]]
name = "s3-get"
crate-type = ["cdylib"]

[[example]]
name = "s3-put"
crate-type = ["cdylib"]

[[example]]
name = "spawn-function"
crate-type = ["cdylib"]

[[example]]
name = "spawn-function-json"
crate-type = ["cdylib"]

[[example]]
name = "fine-foods-embeddings"
crate-type = ["cdylib"]

[[example]]
name = "token-vending-machine"
crate-type = ["cdylib"]

[[example]]
name = "turbopuffer-index"
crate-type = ["cdylib"]

[[example]]
name = "turbopuffer-index-articles"
crate-type = ["cdylib"]

[[example]]
name = "turbopuffer-recommend-articles"
crate-type = ["cdylib"]

[[example]]
name = "turbopuffer-search"
crate-type = ["cdylib"]

[[example]]
name = "turbopuffer-search-articles"
crate-type = ["cdylib"]

[[example]]
name = "valkey-vector-embeddings"
crate-type = ["cdylib"]

[[example]]
name = "valkey-vector-index"
crate-type = ["cdylib"]

[[example]]
name = "valkey-vector-search"
crate-type = ["cdylib"]

[[example]]
name = "web-function"
crate-type = ["cdylib"]

[[example]]
name = "web-function-json-greeter"
crate-type = ["cdylib"]

[[example]]
name = "web-function-token-metadata"
crate-type = ["cdylib"]

[[example]]
name = "environment-variables"
crate-type = ["cdylib"]

[dependencies]
momento-functions-host  = { workspace = true }
momento-functions-wit   = { workspace = true }

serde                   = { workspace = true }
serde_json              = { workspace = true }

tiktoken-rs             = { workspace = true }

[dev-dependencies]
momento-functions-log   = { workspace = true }

itertools               = { workspace = true }
log                     = { workspace = true }
sha2                    = { workspace = true }
