[package]
name = "momento-functions-token"
description = "Host interfaces for Momento Token generation"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde                   = { workspace = true }
serde_json              = { workspace = true }
thiserror               = { workspace = true }
wit-bindgen             = { workspace = true }
