[package]
name = "momento-functions-valkey"
description = "Host interfaces for Valkey cluster interactions"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
momento-functions-bytes = { workspace = true }

thiserror               = { workspace = true }
wit-bindgen             = { workspace = true }
