[package]
name = "example-logging-extended"
version = "0.0.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
momento-functions-bytes     = { workspace = true }
momento-functions-guest-web = { workspace = true }
momento-functions-host-log  = { workspace = true }

log                         = { workspace = true }
serde                       = { workspace = true }
