[package]
name = "example-reading-and-sending-headers"
version = "0.0.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
momento-functions-bytes     = { workspace = true }
momento-functions-guest-web = { workspace = true }

itertools                   = { workspace = true }
serde                       = { workspace = true }
