[package]
name = "example-secrets-manager-get"
version = "0.0.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
momento-functions-aws-auth             = { workspace = true }
momento-functions-aws-secrets-manager  = { workspace = true }
momento-functions-bytes                = { workspace = true }
momento-functions-guest-web            = { workspace = true }
momento-functions-host-log             = { workspace = true }

log                                    = { workspace = true }
serde                                  = { workspace = true }
