[package]
name = "example-valkey-vector-embeddings"
version = "0.0.0"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
momento-functions-bytes     = { workspace = true }
momento-functions-guest-web = { workspace = true }
momento-functions-host-log  = { workspace = true }
momento-functions-http      = { workspace = true }

log                         = { workspace = true }
serde                       = { workspace = true }
serde_json                  = { workspace = true }
